--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -101,6 +101,10 @@
           border-radius: 10px;
           width: 200px;
           cursor: pointer;
+          z-index: 1;
+        }
+        a {
+          text-decoration: none;
         }
       }
     }
